--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=rootpw
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+users.datasource.jdbcUrl=jdbc:mysql://localhost:3306/users?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+users.datasource.username=root
+users.datasource.password=rootpw
+users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
