--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-users.datasource.jdbcUrl=jdbc:mysql://localhost:3306/users?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+users.datasource.jdbcUrl=jdbc:mysql://localhost:3306/users?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 users.datasource.username=root
 users.datasource.password=rootpw
 users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
