Added authentication and role-based authorization of users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ users.datasource.jdbcUrl=jdbc:mysql://localhost:3306/users?allowPublicKeyRetriev
 users.datasource.username=root
 users.datasource.password=rootpw
 users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+deik.sportapp.jwtSecret=SecretKey
+deik.sportapp.jwtExpirationMs=86400000
