--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,10 +11,12 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.17"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8081 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
