Configuration of competitions datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,10 @@ users.datasource.username=root
 users.datasource.password=rootpw
 users.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+competitions.datasource.jdbcUrl=jdbc:mysql://localhost:3306/competitions?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+competitions.datasource.username=root
+competitions.datasource.password=rootpw
+competitions.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 deik.sportapp.jwtSecret=SecretKey
 deik.sportapp.jwtExpirationMs=86400000
